fix needless scrollbar on new ui on certain themes

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,6 +2,7 @@ html {
   font-size: 62.5%;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 ._kong-test {
